// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TokenSelect - Snapshots > should match snapshot with default state 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_1k_"
  aria-expanded="false"
  class="flex items-center justify-between gap-2 whitespace-nowrap rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 h-9 w-[200px]"
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down h-4 w-4 opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`TokenSelect - Snapshots > should match snapshot with selected token 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_1q_"
  aria-expanded="false"
  class="flex items-center justify-between gap-2 whitespace-nowrap rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 h-9 w-[200px]"
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="h-5 w-5 rounded-full bg-blue-500"
      />
      <span>
        USDC
      </span>
    </div>
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down h-4 w-4 opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`TokenSelect - Snapshots > should match snapshot without custom token option 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_20_"
  aria-expanded="false"
  class="flex items-center justify-between gap-2 whitespace-nowrap rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 h-9 w-[200px]"
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down h-4 w-4 opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;
